--- a/Portfolio/welcome.css
+++ b/Portfolio/welcome.css
@@ -8,7 +8,7 @@
     width: 100%;
     height: 100vh;
     background: black;
-    color: #ffa900;
+    color: #00ff88;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -18,5 +18,27 @@
     font-weight: 600px;
 }
 .btn{
-    display: inline-block
+    margin: 0 auto;
+    font-family: "Roboto" , sans-serif;
+    font-size: 18px;
+    font-weight: bold;
+    background: #00ff88;
+    width: 160px;
+    padding: 20px;
+    text-align: center;
+    text-decoration: none;
+    text-transform: uppercase;
+    color: white;
+    border-radius: 5px;
+    cursor: pointer;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-property: box-shadow, transform;
+    transition-property: box-shadow, transf;
+}
+.btn:hover, .btn:focus, .btn:active{
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
 }
