--- a/Portfolio/welcome.css
+++ b/Portfolio/welcome.css
@@ -1,13 +1,13 @@
 *{
-    margin: 0;
-    padding: 0;
+    margin: auto;
+    padding: auto;
     box-sizing: border-box;
     font-family: 'Poppins' , sans-serif;
+    background: black;
 }
 .container{
     width: 100%;
     height: 100vh;
-    background: black;
     color: #00ff88;
     display: flex;
     align-items: center;
@@ -18,12 +18,14 @@
     font-weight: 600px;
 }
 .btn{
-    margin: 0 auto;
+    margin: auto;
     font-family: "Roboto" , sans-serif;
     font-size: 18px;
+    margin-left: 880px;
+    border-left-width: 9;
+    border-top-width: 200px;
     font-weight: bold;
     background: #00ff88;
-    width: 160px;
     padding: 20px;
     text-align: center;
     text-decoration: none;
@@ -36,6 +38,7 @@
     transition-duration: 0.3s;
     -webkit-transition-property: box-shadow, transform;
     transition-property: box-shadow, transf;
+    display: inline;
 }
 .btn:hover, .btn:focus, .btn:active{
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
