--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -16,7 +16,7 @@ body{
 #header{
     width: 100%;
     height: 100vh;
-    background-image: url(Images/pckeyboard.jpg);
+    background-image: url(Images/backgroundpcpc.jpg);
     background-size: cover;
     background-position: center;
 }
